package com.theroyale.backend.model;

public enum EstadoCuenta {
    ABIERTA, CERRADA
}
