package com.theroyale.backend.model;

public enum EstadoHabitacion {
    DISPONIBLE, OCUPADA, MANTENIMIENTO, DESHABILITADA
}