package com.theroyale.backend.model;

public enum EstadoReserva {
    PENDIENTE, CONFIRMADA, EN_CURSO, CANCELADA, FINALIZADA
}
