package com.theroyale.backend.model;

import java.util.ArrayList;
import jakarta.persistence.*;
import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.Getter;
import lombok.NoArgsConstructor;
import lombok.Setter;
import lombok.ToString;
import java.util.List;

// ===== Modelo: representa una habitación física, ligada a un tipo de habitación =====
@Entity
@Table(name = "habitacion")
@Getter
@Setter
@NoArgsConstructor
@AllArgsConstructor
@Builder
public class Habitacion {

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    @Column(nullable = false, unique = true, length = 10)
    private String numero;

    @ManyToOne(fetch = FetchType.EAGER)
    @JoinColumn(name = "tipo_habitacion_id", nullable = false)
    private TipoHabitacion tipoHabitacion;

    @Column(nullable = false)
    private double precio;

    @Enumerated(EnumType.STRING)
    @Column(nullable = false, length = 20)
    private EstadoHabitacion estado;

    @OneToMany(mappedBy = "habitacion")
    @Builder.Default
    @ToString.Exclude
    private List<Reserva> reservas = new ArrayList<>();

    @Override
    public String toString() {
        // tipoHabitacion excluido intencionalmente (asociación -> evita recursión/lazy loading)
        return "Habitacion{id=" + id + ", numero='" + numero + "', precio=" + precio +
                ", estado=" + estado + "}";
    }
}
