@startuml DiagramaClasesTheRoyale
skinparam classAttributeIconSize 0

enum EstadoReserva {
  PENDIENTE
  CONFIRMADA
  CANCELADA
  FINALIZADA
}

enum EstadoHabitacion {
  DISPONIBLE
  OCUPADA
  DESHABILITADA
  MANTENIMIENTO
}

enum EstadoCuenta {
  ABIERTA
  CERRADA
}

enum TipoUsuario {
  CLIENTE
  OPERADOR
  ADMINISTRADOR
}

abstract class Usuario {
  -id: int
  -nombre: string
  -email: string {unique}
  -password: string
  -tipo: TipoUsuario
  +login(email, password): boolean
}

class Cliente extends Usuario {
  -apellido: string
  -telefono: string
  -fechaRegistro: date
  +registrarse(datos): boolean
  +actualizarInfo(datos): void
  +verReservasActivas(): List<Reserva>
  +verHistorialReservas(): List<Reserva>
}

class Operador extends Usuario {
  +verReservas(filtro): List<Reserva>
  +cancelarReserva(idReserva): void
  +agregarServicioACuenta(idReserva, idServicio, cantidad): ItemConsumo
  +eliminarItemCuenta(idItem): void
  +registrarPago(idCuenta, monto, metodoPago): Pago
  +realizarCheckOut(idReserva): boolean
}

class Administrador extends Usuario {
  +crearOperador(datos): Operador
  +eliminarOperador(id): void
  +crearServicio(datos): Servicio
  +actualizarServicio(id, datos): void
  +eliminarServicio(id): void
  +crearHabitacion(datos): Habitacion
  +eliminarHabitacion(id): void
  +deshabilitarHabitacion(id): void
  +crearTipoHabitacion(datos): TipoHabitacion
  +agregarImagen(idTipoHabitacion, url): Imagen
  +eliminarImagen(idImagen): void
}

Usuario "1" -- "1" TipoUsuario

class TipoHabitacion {
  -id: int
  -nombre: string
  -descripcion: string
  -capacidadMaxima: int
  -precioPorNoche: decimal
}

class Imagen {
  -id: int
  -url: string
  -orden: int
}

class Habitacion {
  -id: int
  -numero: string
  -estado: EstadoHabitacion
  +estaDisponible(fechaInicio, fechaFin): boolean
  +habilitar(): void
  +deshabilitar(): void
}

class Reserva {
  -id: int
  -fechaInicio: date
  -fechaFin: date
  -estado: EstadoReserva
  -fechaCreacion: date
  +cancelar(): void
  +modificar(nuevaFechaInicio, nuevaFechaFin): boolean
  +agregarHabitacion(idHabitacion, cantidadPersonas): ReservaHabitacion
  +quitarHabitacion(idReservaHabitacion): void
  +calcularCostoHabitaciones(): decimal
  +calcularSaldoPendiente(): decimal
}

class ReservaHabitacion {
  -id: int
  -cantidadPersonas: int
  -precioNocheAcordado: decimal
  +calcularSubtotal(): decimal
}

class Cuenta {
  -id: int
  -estado: EstadoCuenta
  -fechaCreacion: datetime
  +calcularTotal(): decimal
  +calcularSaldoPendiente(): decimal
  +cerrar(): void
}

class Pago {
  -id: int
  -monto: decimal
  -fecha: datetime
  -metodoPago: string
}

class Servicio {
  -id: int
  -nombre: string
  -descripcion: string
  -precio: decimal
  -categoria: string
  -activo: boolean
}

class ItemConsumo {
  -id: int
  -cantidad: int
  -fechaHora: datetime
  -precioUnitario: decimal
  -pagado: boolean
  +calcularSubtotal(): decimal
}

' ---- Relaciones ----
Cliente "1" -- "0..*" Reserva : realiza >

TipoHabitacion "1" -- "0..*" Habitacion : clasifica >
TipoHabitacion "1" *-- "0..*" Imagen : tiene >

Reserva "1" *-- "1..*" ReservaHabitacion : incluye >
Habitacion "1" -- "0..*" ReservaHabitacion : es reservada en >

Reserva "1" *-- "1" Cuenta : tiene >

Cuenta "1" *-- "0..*" ItemConsumo : contiene >
Cuenta "1" -- "0..*" Pago : recibe >

Servicio "1" -- "0..*" ItemConsumo : corresponde a >

Operador "1" -- "0..*" ItemConsumo : registra >
Operador "1" -- "0..*" Pago : registra >
Operador ..> Reserva : gestiona / cancela (sin vinculo persistido)

Administrador ..> Operador : administra (CRUD)
Administrador ..> Servicio : administra (CRUD)
Administrador ..> Habitacion : administra (CRUD)
Administrador ..> TipoHabitacion : administra
Administrador ..> Imagen : administra

Habitacion -- EstadoHabitacion
Reserva -- EstadoReserva
Cuenta -- EstadoCuenta

@enduml